--- a/app/src/main/res/layout/activity_sign_up_screen.xml
+++ b/app/src/main/res/layout/activity_sign_up_screen.xml
@@ -92,7 +92,8 @@
                 android:layout_height="50dp"
                 android:ems="10"
                 android:hint="@string/password"
-                android:inputType="textPassword"/>
+                android:inputType="textPassword"
+                android:layout_marginLeft="20dp"/>
 
         </android.support.design.widget.TextInputLayout>
     </LinearLayout>
