--- a/app/src/main/res/layout/fragment_maps.xml
+++ b/app/src/main/res/layout/fragment_maps.xml
@@ -1,15 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+<FrameLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/mapView"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent" >
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_centerVertical="true"
-        android:text="@string/title_maps"
-        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large" />
+    <com.google.android.gms.maps.MapView
+        android:id="@+id/google_map_id"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
+    </com.google.android.gms.maps.MapView>
 
-</android.support.constraint.ConstraintLayout>
+</FrameLayout>
