--- a/app/src/main/res/layout/dialog_account_settings.xml
+++ b/app/src/main/res/layout/dialog_account_settings.xml
@@ -20,7 +20,7 @@
             android:id="@+id/usernamename_dialog_txt"
             android:layout_width="150dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="130dp"
+            android:layout_marginTop="100dp"
             android:layout_marginBottom="3dp"
             android:hint="@string/email"
             android:textColorHint="@color/colorWhite"
@@ -43,30 +43,40 @@
 
         <Button
             android:id="@+id/save_acct_changes_btn"
-            android:drawablePadding="20dp"
+            android:drawablePadding="30dp"
+            android:layout_marginTop="36dp"
             android:textAlignment="textStart"
-            android:padding="20dp"
             android:drawableLeft="@drawable/ic_action_save"
             android:layout_gravity="start"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="40dp"
             android:background="@color/medGray"
             android:text="Save Changes"
             android:textColor="@color/colorWhite"/>
 
         <Button
             android:id="@+id/delete_acct_btn"
-            android:drawablePadding="20dp"
+            android:drawablePadding="30dp"
             android:textAlignment="textStart"
-            android:padding="20dp"
             android:drawableLeft="@drawable/ic_action_delete"
             android:layout_gravity="start"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="40dp"
             android:background="@color/medGray"
             android:text="Delete Account"
             android:textColor="@color/colorWhite"/>
 
+        <Button
+            android:id="@+id/logout_btn"
+            android:drawablePadding="30dp"
+            android:textAlignment="textStart"
+            android:drawableLeft="@drawable/ic_action_logout"
+            android:layout_gravity="start"
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:background="@color/medGray"
+            android:text="Logout"
+            android:textColor="@color/colorWhite"/>
     </LinearLayout>
 
     <ImageView
