--- a/app/src/main/res/layout/fragment_favorites.xml
+++ b/app/src/main/res/layout/fragment_favorites.xml
@@ -4,12 +4,19 @@
     android:layout_height="match_parent"
     android:background="@color/darkMode">
 
-    <TextView
+   <!-- <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:layout_centerVertical="true"
         android:text="@string/title_favorites"
         android:textAppearance="@style/Base.TextAppearance.AppCompat.Large" />
+-->
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/favorites_recyclerview"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+    </android.support.v7.widget.RecyclerView>
+
 
 </android.support.constraint.ConstraintLayout>
